--- a/scottie-gg-xxx/src/style/homepage.css
+++ b/scottie-gg-xxx/src/style/homepage.css
@@ -1,5 +1,13 @@
 .intro {
-    height: 100% !important;
-    background: url(../assets/graphics/code.png) no-repeat center;
+    display: table;
+    width: 100%;
+    height: inherit;
+    padding: 100px 0;
+    text-align: center;
+    color: #fff;
+    background: #000 url(../assets/graphics/code.png) no-repeat scroll bottom center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
     background-size: cover;
+    -o-background-size: cover;
 }
